search.css
body,
html {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    background: #202020 !important;
}

ul,
p {
    margin: 0;
}

.card {
    cursor: pointer;
    overflow: hidden;
    -webkit-transition: 600ms -webkit-filter linear, transform 300ms;
    -moz-transition: 600ms -moz-filter linear, transform 300ms;
    -moz-transition: 600ms filter linear, transform 300ms;
    -ms-transition: 600ms -ms-filter linear, transform 300ms;
    -o-transition: 600ms -o-filter linear, transform 300ms;
    transition: 600ms filter linear, 300ms -webkit-filter linear, transform 300ms;
}

.card:hover {
    filter: grayscale(70%) brightness(150%);
    -webkit-filter: grayscale(70%) brightness(150%);
    transform: scale(1.03);
}


.searchbar button {
    background: none;
    border: none;
    padding: 0;
    outline: inherit;
}

.searchbar {
    margin-top: 20px;
    height: 50px;
    background-color: #353b48;
    border-radius: 30px;
    padding: 5px;
}

.search_label {
    color: white;
    padding: 0 10px;
    line-height: 40px;
}

.search_input {
    color: white;
    border: 0;
    outline: 0;
    background: none;
    width: 0;
    caret-color: transparent;
    line-height: 40px;
    transition: width 0.4s linear;
}

.searchbar:hover>.search_input {
    padding: 0 10px;
    width: 300px;
    caret-color: red;
    transition: width 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
}

.searchbar:hover>.search_icon {
    background: white;
    color: #e74c3c;
}

.search_icon {
    height: 40px;
    width: 40px;
    float: right;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    color: white;
    text-decoration: none;
}

.row-cols-5>* {
    max-width: 19%;
}

.card {
    min-height: 100%;
    max-height: 100%;
}

#filters ul {
    padding: 0;
}

#filters li {
    display: inline;
    list-style: none;
    /* pour enlever les puces sur IE7 */
    /* margin: 2.5px; */
    margin-bottom: 15px;
}

#filters button {
    color: white;
    background-color: #353b48;
    border-radius: 10px;
    padding: 5px 10px;
    margin: 0 2.5px;
    border: none;
}

#filters button:hover {
    background-color: #555c6b;
}

#filters button.active {
    background-color: #973535;
}

#filters button.active:hover {
    color: white;
    background-color: #c24e4e;
}

#switch {
    margin-top: 20px;
    margin-bottom: 20px;
    padding: 5px;
    /* background-color: #363636; */
    /* border-radius: 10px; */
}

#switch_ctrl {
    margin-right: 20px;
    background-color: rgb(48, 48, 48);
    border-radius: 10px;
    overflow: hidden;
}

#switch_ctrl:first-child {
    padding-left: 10px;
}

#switch_ctrl button {
    color: black;
    background-color: rgb(119, 119, 119);
    border-radius: 0px;
    border-left: solid rgb(48, 48, 48) 3px;
    margin: 0px;
}

#switch_ctrl button.active {
    color: white;
    background-color: #973535;
}

#switch_ctrl button.active:hover {
    color: white;
    background-color: #c24e4e;
}

#result {
    margin-bottom: 20px;
}

#logo {
    margin-top: 20px;
    max-width: 70px;
}

